# yle-news-mcp

./: .gitignore  README.md  pyproject.toml
src/mcp_demo/: __init__.py  main.py  server.py
tests/: test_server.py
