[project]
name = "mcp-demo"
version = "0.1.0"
description = "A demo project for model control protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "feedparser>=6.0.10"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_demo"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

[tool.uv]

